# swagger.yaml
@@ -8,6 +8,7 @@ host: localhost:3001
 basePath: /api/v1
 schemes:
   - http
+
 paths:
   /user/login:
     post:
@@ -33,6 +34,7 @@ paths:
           description: Invalid Fields
         '500':
           description: Internal Server Error
+
   /user/signup:
     post:
       tags:
@@ -49,7 +51,7 @@ paths:
       produces:
         - application/json
       responses:
-        '200':
+        '201':
           description: Signup Successfully
           schema:
             $ref: '#/definitions/ApiResponse'
@@ -57,6 +59,7 @@ paths:
           description: Invalid Fields
         '500':
           description: Internal Server Error
+
   /user/profile:
     get:
       security:
@@ -69,13 +72,16 @@ paths:
        # - application/json
       responses:
         '200':
-          description: User profile retrieved successully
+          description: User profile retrieved successfully
           schema:
             $ref: '#/definitions/ApiResponse'
         '400':
           description: Invalid Fields
+        '401':
+          description: Unauthorized
         '500':
           description: Internal Server Error
+
     put:
       security:
         - Bearer: []
@@ -94,106 +100,175 @@ paths:
         - application/json
       responses:
         '200':
-          description: User profile retrieved successully
+          description: User profile updated successfully
           schema:
             $ref: '#/definitions/ApiResponse'
         '400':
           description: Invalid Fields
         '500':
           description: Internal Server Error
-  /user/accounts:
+
+  /accounts:
     get:
       security:
         - Bearer: []
       tags:
-        - User Module
-      summary: Get User Accounts
-      description: API for fetching user accounts
-      #produces:
-       # - application/json
-      responses:
-        '200':
-          description: User accounts retrieved successully
-          schema:
-            $ref: '#/definitions/AccountResponse'
-        '400':
-          description: Invalid Fields
-        '500':
-          description: Internal Server Error
-  /user/transaction:
-    get:
-      security:
-        - Bearer: []
-      tags:
-        - User Module
-      summary: Get User Transactions
-      description: API for fetching user transactions
-      #produces:
-       # - application/json
-      responses:
-        '200':
-          description: User transactions retrieved successully
-          schema:
-            $ref: '#/definitions/TransactionResponse'
-        '400':
-          description: Invalid Fields
-        '500':
-          description: Internal Server Error 
-    put:
-      security:
-        - Bearer: []
-      tags:
-        - User Module
-      summary: User Transaction API
-      description: API for updating a user transaction 
+        - Account Module
+      summary: Account API
+      description: API for fetching accounts
       parameters:
-        - in: body
-          name: body
-          description: Update user transaction attributes
+        - in: query
+          name: userId
+          description: ID of the user to fetch accounts for
           required: true
-          schema:
-            $ref: '#/definitions/UserTransactionUpdate'
+          type: string
       produces:
         - application/json
       responses:
         '200':
-          description: User transaction retrieved successully
+          description: Accounts retrieved successfully
           schema:
-            $ref: '#/definitions/TransactionResponse'
+            $ref: '#/definitions/AccountListResponse'
         '400':
           description: Invalid Fields
         '500':
           description: Internal Server Error
+
+  /transactions:
+    get:
+      security:
+        - Bearer: []
+      tags:
+        - Transaction Module
+      summary: Transaction API
+      description: API for fetching account transactions
+      parameters:
+        - in: query
+          name: accountId
+          description: ID of the account to fetch transactions for
+          required: true
+          type: string
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: Transactions retrieved successfully
+          schema:
+            $ref: '#/definitions/TransactionListResponse'
+        '400':
+          description: Invalid Fields
+        '500':
+          description: Internal Server Error
+
+  /notes:
+    post:
+      security:
+        - Bearer: []
+      tags:
+        - Transaction Module
+      summary: Add a Note to a Transaction
+      description: Allows users to add a note to a specific transaction by ID.
+      parameters:
+        - in: body
+          name: body
+          description: Note
+          required: true
+          schema:
+            $ref: '#/definitions/Note'
+      produces:
+        - application/json
+      responses:
+        '201':
+          description: Note successfully added to the transaction
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        '400':
+          description: Invalid Fields
+        '404':
+          description: Transaction not found
+        '500':
+          description: Internal Server Error
+
     delete:
       security:
         - Bearer: []
       tags:
-        - User Module
-      summary: User Transaction API
-      description: API for deleting a user transaction note
+        - Transaction Module
+      summary: Delete a Note from a Transaction
+      description: Allows users to delete a note from a specific transaction by ID.
       parameters:
         - in: body
           name: body
-          description: delete user transaction note
+          description: Note
           required: true
           schema:
-            $ref: '#/definitions/UserTransactiondelete'
+            $ref: '#/definitions/DeleteNote'
       produces:
         - application/json
       responses:
         '200':
-          description: User transaction deleted successully
+          description: Note successfully deleted
           schema:
-            $ref: '#/definitions/TransactionResponse'
+            $ref: '#/definitions/ApiResponse'
         '400':
           description: Invalid Fields
+        '404':
+          description: Note not found
         '500':
           description: Internal Server Error
+
+  /categories:
+    get:
+      tags:
+        - Category Module
+      summary: Retrieve Categories
+      description: API for retrieving available transaction categories
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: Categories retrieved successfully
+          schema:
+            type: array
+            items:
+              type: string
+        '500':
+          description: Internal Server Error
+
+    post:
+      security:
+        - Bearer: []
+      tags:
+        - Category Module
+      summary: Add a Category to a Transaction
+      description: Allows users to add a category to a specific transaction by ID.
+      parameters:
+        - in: body
+          name: body
+          description: Category
+          required: true
+          schema:
+            $ref: '#/definitions/Category'
+      produces:
+        - application/json
+      responses:
+        '201':
+          description: Category successfully added to a transaction
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        '400':
+          description: Invalid Fields
+        '404':
+          description: Transaction not found
+        '500':
+          description: Internal Server Error
+
 securityDefinitions:
   Bearer:
     type: apiKey
     name: Authorization
     in: header
+
 definitions:
   User:
     properties:
@@ -212,6 +287,7 @@ definitions:
       userName:
         type: string
         description: user public name
+
   Login:
     properties:
       email:
@@ -220,6 +296,7 @@ definitions:
       password:
         type: string
         description: user password
+
   ApiResponse:
     type: object
     properties:
@@ -229,76 +306,93 @@ definitions:
         type: string
       body:
         type: object
-        properties:
-          id:
-            type: string
-          email:
-            type: string
+
   LoginResponse:
     type: object
     properties:
       token:
         type: string
+
   UserProfile:
     type: object
     properties:
       userName:
         type: string
-  AccountResponse:
-    type: object
+
+  Note:
     properties:
-      status:
-        type: integer
-      message:
+      transactionId:
         type: string
-      body:
-        type: array
-        items:
-          type: object
-          properties:
-            id:
-              type: string
-            title:
-              type: string
-            balance:
-              type: integer
-  TransactionResponse:
-    type: object
-    properties:
-      status:
-        type: integer
-      message:
-        type: string
-      body:
-        type: array
-        items:
-          type: object
-          properties:
-            id:
-              type: string
-            title:
-              type: string
-            date:
-              type: string
-            amount:
-              type: integer
-            type:
-              type: string
-            categories:
-              type: string
-            note:
-              type: string
-  UserTransactionUpdate:
-    type: object
-    properties:
+        description: ID of the transaction
       note:
         type: string
-      categories:
+
+  DeleteNote:
+    properties:
+      transactionId:
         type: string
-  UserTransactiondelete:
+        description: ID of the transaction
+      noteId:
+        type: string
+
+  Category:
+    properties:
+      transactionId:
+        type: string
+        description: ID of transaction
+      category:
+        type: string
+
+  Account:
     type: object
-    required:
-      - id
     properties:
       id:
         type: string
+      title:
+        type: string
+      balance:
+        type: number
+        format: float
+
+  Transaction:
+    type: object
+    properties:
+      id:
+        type: string
+      date:
+        type: string
+      title:
+        type: string
+      amount:
+        type: number
+        format: float
+      type:
+        type: string
+      note:
+        type: string
+      category:
+        type: string
+
+  AccountListResponse:
+    type: object
+    properties:
+      status:
+        type: integer
+      message:
+        type: string
+      body:
+        type: array
+        items:
+          $ref: '#/definitions/Account'
+
+  TransactionListResponse:
+    type: object
+    properties:
+      status:
+        type: integer
+      message:
+        type: string
+      body:
+        type: array
+        items:
+          $ref: '#/definitions/Transaction'
